# Capybara

./: .gitignore  CMakeLists.txt  CodeAnalysis.txt  README.md  main.cpp
.github/workflows/: CI-CD Report.txt  build-test-cmake-cpp.yml  github-actions-demo.yml
CMakeProject1/: CMakeLists.txt
Capybara/: CMakeLists.txt  Capybara.cpp  Capybara.h  Dataset.cpp  Dataset.h  Weights.cpp  Weights.h  database.cpp  database.h  databaseAbstract.h  hello_test.cc  intermediary.cpp  intermediary.h  linear_regression.cpp  utils.cpp  utils.h
Capybara Client frontend/: add.html  index.html  main.html  ratings.html  register.html  search.html  searchclosest.html  update.html
Database/: CMakeLists.txt  Findmysql-connector-c++.cmake  example.cpp
System Testing/: Capybara.postman_collection.json
Unit Test Frontend/: add_and_tests.html  ratings_and_tests.html  search.test.js  search_and_tests.html  searchclosest.test.js  searchclosest_and_tests.html  update_and_tests.html
Unittest/: CMakeLists.txt  Unittest.cc  Unittest.cpp
